--- a/css/redesign-cc73cf.webflow.css
+++ b/css/redesign-cc73cf.webflow.css
@@ -1,3 +1,89 @@
+/* glitter effect */
+.glittoris{
+  position:fixed;
+  top:-10%;
+  z-index:-1;
+  user-select:none;
+  animation-name: vert,hori;
+  animation-duration: 14s,3s;
+  animation-timing-function:linear, ease-in-out;
+  animation-iteration-count:infinite,infinite;
+  animation-play-state:running,running;
+}
+.glittoris img{
+  width: 1.5rem;
+}
+
+.glittoris:nth-of-type(1) {
+  left: 10%;
+  animation-delay: 1s, 1s;
+}
+.glittoris:nth-of-type(2) {
+  left: 20%;
+  animation-delay: 6s, 0.5s;
+}
+.glittoris:nth-of-type(3) {
+  left: 30%;
+  animation-delay: 4s, 2s;
+}
+.glittoris:nth-of-type(4) {
+  left: 40%;
+  animation-delay: 2s, 2s;
+}
+.glittoris:nth-of-type(5) {
+  left: 50%;
+  animation-delay: 8s, 3s;
+}
+.glittoris:nth-of-type(6) {
+  left: 60%;
+  animation-delay: 6s, 2s;
+}
+.glittoris:nth-of-type(7) {
+  left: 70%;
+  animation-delay: 2.5s, 1s;
+}
+.glittoris:nth-of-type(8) {
+  left: 80%;
+  animation-delay: 1s, 0s;
+}
+
+@keyframes vert{
+  0%{top: -10%;}
+  100%{top:100%;}
+}
+@keyframes hori{
+  0%{transform:translateX(0);}
+  50%{transform:translateX(10px);}
+  100%{transform:translateX(0);}
+}
+/* end glitter effect */
+
+/* comingsoon */
+.soon{
+  font-family: Apercu, sans-serif;
+  color: #3a3d7c;
+  font-size: 1em;
+  line-height: 1.5em;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height:90vh;
+  flex-direction:column;
+}
+
+.soon2{
+
+}
+
+.soon img{
+  width:5rem;
+  top: 500px;
+  display:block;
+  padding-bottom:10px;
+}
+/* end comingsoon */
+
 /* find mehover effect */
 .findmelink {
   color: #3a3d7c;
@@ -10,8 +96,6 @@
   padding-bottom:1px;
   box-sizing: border-box;
 }
-
-
 
  .findmelink:hover{
  border: none;
@@ -27,7 +111,6 @@
 ::-moz-selection {
   background: #FFEBEE; /* Gecko Browsers */
 }
-
 
 /* homelink tooltip */
 .tooltip {
