--- a/css/redesign-cc73cf.webflow.css
+++ b/css/redesign-cc73cf.webflow.css
@@ -9,6 +9,16 @@
   animation-timing-function:linear, ease-in-out;
   animation-iteration-count:infinite,infinite;
   animation-play-state:running,running;
+
+  -webkit-user-select: none;
+  -webkit-amimation-name: vert, hori;
+  -webkit-animation-duration: 14s, 3s;
+  -webkit-animation-timing-function: linear, ease-in-out;
+  -webkit-animation-iteration-count: infinite, infinite;
+  -webkit-animation-play-state: running, running;
+
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 .glittoris img{
   width: 1.5rem;
@@ -16,34 +26,42 @@
 
 .glittoris:nth-of-type(1) {
   left: 10%;
+  -webkit-animation-delay: 1s,1s;
   animation-delay: 1s, 1s;
 }
 .glittoris:nth-of-type(2) {
   left: 20%;
+  -webkit-animation-delay: 6s,.5s;
   animation-delay: 6s, 0.5s;
 }
 .glittoris:nth-of-type(3) {
   left: 30%;
+  -webkit-animation-delay: 4s,2s;
   animation-delay: 4s, 2s;
 }
 .glittoris:nth-of-type(4) {
   left: 40%;
+  -webkit-animation-delay: 2s,2s;
   animation-delay: 2s, 2s;
 }
 .glittoris:nth-of-type(5) {
   left: 50%;
+  -webkit-animation-delay: 8s,3s;
   animation-delay: 8s, 3s;
 }
 .glittoris:nth-of-type(6) {
   left: 60%;
+  -webkit-animation-delay: 6s,2s;
   animation-delay: 6s, 2s;
 }
 .glittoris:nth-of-type(7) {
   left: 70%;
+  -webkit-animation-delay: 2.5s,1s;
   animation-delay: 2.5s, 1s;
 }
 .glittoris:nth-of-type(8) {
   left: 80%;
+  -webkit-animation-delay: 1s,0s;
   animation-delay: 1s, 0s;
 }
 
