user selecty stuff

--- a/css/redesign-cc73cf.webflow.css
+++ b/css/redesign-cc73cf.webflow.css
@@ -99,6 +99,9 @@
   top: 500px;
   display:block;
   padding-bottom:10px;
+  user-select:none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 /* end comingsoon */
 
