--- a/css/redesign-cc73cf.webflow.css
+++ b/css/redesign-cc73cf.webflow.css
@@ -100,6 +100,7 @@
   display:block;
   padding-bottom:10px;
   user-select:none;
+  -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
 }
